tests/lazy_node_modules/lazy_node_modules.exp
Error ----------------------------------------------------------------------------------- node_modules/foo/index.js:3:17

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   node_modules/foo/index.js:3:17
   3| var x: string = 123; // This error shows up since this file is a dependency
                      ^^^ [1]

References:
   node_modules/foo/index.js:3:8
   3| var x: string = 123; // This error shows up since this file is a dependency
             ^^^^^^ [2]



Found 1 error
